--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,17 @@ body {
   font-weight: normal;
 }
 
-@media only screen and (max-width: 767px) {
+.container {
+  max-width: 960px;
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .home {
     height: calc(100vh - 3.75rem);
   }
