--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -40,8 +40,7 @@ header {
   .nav-links {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 1s, opacity 1s;
-    margin-top: 4rem;
+    transition: visibility 1s, opacity 1s, margin-top 1s;
     margin-right: 0;
     width: 100%;
   }
@@ -49,11 +48,19 @@ header {
   .nav-links > a {
     display: block;
     line-height: 3rem;
+    height: 0;
+    border: 1px solid transparent;
+    transition: all 1s;
   }
 
   header.open > .nav-links {
     visibility: visible;
     opacity: 1;
+    margin-top: 4rem;
+  }
+
+  header.open > .nav-links > a {
+    height: 3rem;
   }
 
   header.open > .nav-links > a:not(:last-child) {
