--- a/assets/css/preloader.css
+++ b/assets/css/preloader.css
@@ -22,17 +22,17 @@ body.loaded {
 }
 
 body::-webkit-scrollbar {
-  width: 0.4rem;               /* width of the entire scrollbar */
+  width: 0.4rem;
 }
 
 body::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.2);        /* color of the tracking area */
+  background: rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.4);    /* color of the scroll thumb */
-  border-radius: 0.5rem;       /* roundness of the scroll thumb */
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 0.5rem;
 }
 
 .font-weight-light {
@@ -74,14 +74,23 @@ body.loaded .preloader {
   top: 0;
   color: white;
   position: fixed;
-  width: 100vw;
-  background: url('../img/preloader-img.jpg') no-repeat;
-  background: url('../img/preloader-img.webp') no-repeat;
-  background-size: cover;
-  background-position: center;
+  width: 100%;
   height: 100vh;
   z-index: 1000;
   transition: transform 1s cubic-bezier(0.3, 0, 0.5, 1);
+}
+
+.preloader-bg {
+  position: fixed;
+  background-color: #6f7b7f;
+  height: 100vh;
+  width: 100%;
+}
+
+.preloader-img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .preloader-content {
@@ -138,5 +147,9 @@ body.loaded .preloader {
 @media only screen and (max-width: 768px) {
   .brand-container {
     margin-left: 1rem;
-  }  
+  }
+
+  .loader-text h4 {
+    font-size: 2rem;
+  }
 }
