--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -17,6 +17,8 @@
   margin-bottom: 2rem;
   overflow: hidden;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .col .bg-img {
@@ -121,23 +123,36 @@
   }
 }
 
+@media (hover: none) {
+  .col .bg-img {
+    position: relative;
+    height: 18rem;
+  }
+  
+  .col > .project-info {
+    visibility: visible;
+    opacity: 1;
+    position: relative;
+    color: black;
+    background-color: rgba(0,0,0,0.15);
+  }
+
+  .nitc-logo > img, .pnw-logo > img {
+    filter: invert(1);
+  }
+}
+
 @media screen and (max-width: 768px) {
   .col {
     width: 100%;
   }
 
   .col .bg-img {
-    position: relative;
-    height: 15rem;
+    height: 30rem;
   }
-  
+
   .col > .project-info {
     font-size: 0.875rem;
-    visibility: visible;
-    opacity: 1;
-    position: relative;
-    color: black;
-    background-color: rgba(0,0,0,0.15);
   }
 
   .project-info > .logo {
@@ -151,10 +166,11 @@
   .row {
     margin: 2rem 3rem 0;
   }
+
 }
 
 @media screen and (max-width: 576px) {
-  .col {
-    min-height: 12rem;
+  .col .bg-img {
+    height: 12.5rem;
   }
 }
