--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -8,28 +8,20 @@
   font-size: 1.15rem;
 }
 
-#map {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .contact-map {
-  min-height: 30rem;
   margin: 2rem 3rem 0;
   flex: 1;
-  display: flex;
-  flex-direction: column;
+}
+
+.contact-map img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .contact-info {
-  padding-top: 1rem;
   flex: 1;
-  margin: 1rem 0 3rem 3rem;
+  margin: 2rem 0 3rem 3rem;
 }
 
 .contact-form {
@@ -95,12 +87,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  #map {
-    width: 80%;
-    margin: 0 auto 2rem;
-    justify-content: center;
-  }
-
   .contact {
     flex-direction: column;
     height: auto;
@@ -120,9 +106,7 @@
 
   .contact-map {
     margin: 2rem auto 0;
-    width: 100%;
-    min-height: 20rem;
-    height: 50vh;
+    width: 80%;
   }
 
   .address-info {
