--- a/assets/css/hackathons.css
+++ b/assets/css/hackathons.css
@@ -1,4 +1,4 @@
-.projects {
+.hackathons {
   padding-top: 1rem;
   margin-bottom: 2.5rem;
 }
@@ -12,7 +12,7 @@
 
 .col {
   width: 48%;
-  min-height: 30rem;
+  min-height: 26rem;
   margin-bottom: 2rem;
   overflow: hidden;
   position: relative;
@@ -31,7 +31,7 @@
   width: 100%;
 }
 
-.col > .project-info {
+.col > .hackathon-info {
   height: 100%;
   width: 100%;
   display: flex;
@@ -46,45 +46,47 @@
   opacity: 0;
 }
 
-.project-info > .logo {
+.hackathon-info > .logo {
   width: 100%;
   height: 100%;
 }
 
-.project-info > .tags {
+.hackathon-info > .tags {
   font-family: Lato;
   font-variant: small-caps;
   margin: 0.5rem 0;
 }
 
-.project-info .project-title {
-  margin-bottom: 0.5rem;
+.hackathon-info .hackathon-title {
+  margin-bottom: 0.25rem;
   margin-top: 0.5rem;
 }
 
-.project-info .project-title i {
+.hackathon-info .hackathon-title i {
   font-size: 1rem;
   top: -2px;
   position: relative;
 }
 
-.project-info > .project-subtitle {
+.hackathon-info .hackathon-github,
+.hackathon-info .hackathon-showcase {
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.hackathon-info > .hackathon-subtitle {
   margin-bottom: 0.25rem;
 }
 
-.project-info .logo > img {
-  width: 6rem;
-}
-
-.project-info .pnw-logo > img {
+.hackathon-info .logo > img {
   width: 7rem;
 }
 
-.project-info .nitc-logo > img {
-  width: 5rem;
+.ethonline-logo > img {
+  width: 7rem;
 }
 
-.project-info > .nitc-logo {
+.hackathon-info > .nitc-logo {
   filter: invert(1);
 }
 
@@ -92,14 +94,14 @@
   font-size: 0.6rem;
 }
 
-.project-info .desc {
+.hackathon-info .desc {
   font-family: Montserrat;
   text-align: justify;
 }
 
 @media screen and (min-width: 769px) {
-  .col:hover > .project-info,
-  .col:focus > .project-info {
+  .col:hover > .hackathon-info,
+  .col:focus > .hackathon-info {
     visibility: visible;
     backdrop-filter: blur(2px);
     background-color: rgba(0, 0, 0, 0.6);
@@ -132,7 +134,7 @@
     position: relative;
   }
 
-  .col > .project-info {
+  .col > .hackathon-info {
     font-size: 0.875rem;
     visibility: visible;
     opacity: 1;
@@ -146,7 +148,7 @@
     filter: invert(1);
   }
 
-  .projects {
+  .hackathons {
     margin-bottom: 0;
   }
 
@@ -160,7 +162,7 @@
     height: 12.5rem;
   }
 
-  .project-info > .logo {
+  .hackathon-info > .logo {
     display: none;
   }
 }
